kubernetes/apps/default/neatplan/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: neatplan
  namespace: default
  labels:
    app.kubernetes.io/name: neatplan
spec:
  type: ClusterIP
  ports:
    - port: 4040
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: neatplan
    app.kubernetes.io/instance: neatplan
    app.kubernetes.io/name: neatplan
