kubernetes/apps/default/neatplan/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: neatplan
  namespace: default
  labels:
    app.kubernetes.io/name: neatplan
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - neatplan.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: neatplan
          port: 4040
